Add styles for homepage and header

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -2,16 +2,17 @@
 $color-background-main: linear-gradient(253deg, rgba(0,0,0,1) 0%, rgb(38, 38, 38) 100%);
 
 $color-primary: #007fe0;
-
-
-
-
-
-
-
-
-
 $color-light: #fff;
+$color-gray: #c4c4c4;
+
+
+
+
+
+
+
+
+
 
 $color-success: #01916d;
 $color-success-back: #00bc8c;
