--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -37,34 +37,30 @@
 
 .small {
   @extend .main;
-
   font-size: 13px;
   line-height: 24px;
   padding: 5px 10px;
   font-weight: 400;
 }
 
-.outline,
-.outline__checked {
-  display: inline-block;
-  padding: 5px 10px;
-  border: 1px solid $color-light;
-  color: $color-light;
-  font-size: 13px;
-  line-height: 22px;
-  margin-right: 5px;
+.outline {
+  padding: 10px 20px;
+  border: 1px solid $color-primary;
+  position: relative;
 
-  &__checked {
-    border-color: $color-primary;
+  &::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
     background-color: $color-primary;
-    color: $color-light;
+    height: 100%;
+    width: 0;
+    transition: $transition;
+    z-index: -1;
   }
 
-  &:not(.noHover):hover {
-    @extend %hover;
-
-    background-color: $color-light;
-    color: $color-light;
-    border-color: $color-light;
-  }
+  &:hover:before {
+    width: 100%;
+  } 
 }
