--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -1,10 +1,13 @@
 @import '../../../styles/settings.scss';
 
 .root {
+  position: absolute;
+  width: 100%;
   display: flex;
-  padding: 36px 34px;
+  padding: 36px 48px;
   align-items: center;
   justify-content: space-between;
+  z-index: 999;
 }
 
 .logo {
@@ -33,7 +36,7 @@
   }
 
   &:hover::after {
-    height: 3px;
+    height: 2px;
     width: 100%;
   }
 
