--- a/src/components/views/Homepage/Homepage.module.scss
+++ b/src/components/views/Homepage/Homepage.module.scss
@@ -1,4 +1,69 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+  position: relative;
+  height: 100vh;
+  padding: 100px 48px;
+
+  h3 {
+    text-align: right;
+    margin: 20px -0.5rem 0 0;
+    text-transform: uppercase;
+    font-weight: 400;
+    color: $color-gray;
+    font-size: 2.4rem;
+    letter-spacing: 0.5rem;
+  }
+}
+
+.elipse {
+  position: absolute;
+
+  &:nth-of-type(1) {
+    right: 0;
+  }
+
+  &:nth-of-type(2) {
+    bottom: 10px;
+    left: 10px;
+  }
+
+  &:nth-of-type(3) {
+    top: 40%;
+    left: 30%;
+  }
+}
+
+.name {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin-top: 25%;
+
+  h1 {
+    margin: 0;
+    font-weight: 400;
+    font-size: 4.8rem;
+    align-self: center;
+  }
+
+  .surname {
+    margin-left: 30px;
+    height: 100%;
+  }
+}
+
+.buttons {
+  text-align: right;
+  margin-top: 25px;
+
+  a:first-child {
+    margin-right: 25px;
+  }
+
+  i {
+    margin-right: 10px;
+    font-size: 2rem;
+  }
+}
+
